# English-entropy-rate

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
data/: README.md  middlemarch_lowercase_letters_spaces.txt  sample.txt
results/: baseline_middlemarch.md  baseline_middlemarch_lowercase_letters_spaces.md  llm_distilgpt2_middlemarch_lowercase_50k.md  llm_distilgpt2_middlemarch_lowercase_full.md  llm_qwen3_0_6b_middlemarch_lowercase_50k.md  my_llm_sample_roundtrip.md
src/english_entropy_rate/: __init__.py  arithmetic.py  baseline.py  cli.py  llm_compressor.py  llm_estimator.py  my_llm_format.py  normalize.py
tests/: test_baseline.py
